handle error when calling get_full_list on collection impl

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ version = "0.1.0"
 edition = "2024"
 license = "MIT"
 description = "An unofficial Rust SDK for pocketbase clients."
-authors = ["ThomasGysemans<support@sciencesky.fr>"]
+authors = ["ThomasGysemans<thomas@gysemans.dev>"]
 repository = "https://github.com/ThomasGysemans/pbrsdk"
 readme = "README.md"
 keywords = ["pocketbase", "sdk", "pb", "rust-pocketbase"]
