--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,4 @@
-workspace = { members = ["example", "pbrsdk_derive"] }
+workspace = { members = ["example", "pbrsdk_macros"] }
 
 [package]
 name = "pbrsdk"
@@ -17,5 +17,5 @@ reqwest = "0.13.1"
 thiserror = "2.0.18"
 serde_json = "1.0.149"
 serde = { version = "1.0.228", features = ["derive"] }
-pbrsdk_derive = { path = "./pbrsdk_derive" }
+pbrsdk_macros = { path = "./pbrsdk_macros" }
 tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
