handle jwt token and allow to authenticate as super user

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ serde_json = "1.0.149"
 serde = { version = "1.0.228", features = ["derive"] }
 pbrsdk_macros = { path = "./pbrsdk_macros" }
 tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
+base64 = "0.22.1"
