--- a/pbrsdk_macros/Cargo.toml
+++ b/pbrsdk_macros/Cargo.toml
@@ -10,3 +10,6 @@ proc-macro = true
 proc-macro2 = "1.0.106"
 quote = "1.0.44"
 syn = { version = "2.0.114", features = ["full"] }
+
+[dev-dependencies]
+serde = { version = "1", features = ["derive"] }
