--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
 base64 = "0.22.1"
 urlencoding = "2.1.3"
 once_cell = "1.21.3"
+serial_test = "3.3.1"
